# sequence-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  codecov.yml  coverage.xml  pyproject.toml  run-server.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml  mutation-testing.yml  mutation.yml
sequence_mcp/: __init__.py  client.py  models.py  server.py
tests/: __init__.py  conftest.py  test_client.py  test_models.py  test_server.py
