[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sequence-mcp"
version = "0.1.0"
description = "MCP server for the Sequence Banking API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-describe>=2.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.20.0",
    "mutmut>=3.0.0",
]

[project.scripts]
sequence-mcp = "sequence_mcp.server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
addopts = "--cov=sequence_mcp --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
branch = true
source = ["sequence_mcp"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "def main\\(\\):",
    "async def main\\(\\):",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sequence_mcp*"]

[tool.mutmut]
paths_to_mutate = ["sequence_mcp/"]
